# Strings

./: .gitignore  .pre-commit-config.yaml  QWEN.md  README.md  SPARC.md  fastagent.config.yaml  opengrep.yaml  pyproject.toml
.qwen/agents/: fast-agent-specialist.md  fast-api-specialist  fastagent_specialist.md  python-specialist.md  python_specialist.md
prompts/: USAGE.md  analyzer.md
scripts/: USAGE.md  security_check.py
src/agents/: USAGE.md  core.py  evaluator_optimizer.py  settings.py  specification.py  workflows.py
tests/: USAGE.md  test_agents.py
