[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-agent-example"
version = "0.1.0"
description = "Example agent system following fast-agent guidelines"
requires-python = ">=3.11"
dependencies = [
    "fast-agent-mcp>=0.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "uv>=0.1.0",
    "prospector>=1.0.0",
    "opengrep>=0.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
security-check = "scripts.security_check:main"

[tool.prospector]
inherits = ["strict"]
strictness = "medium"
doc-warnings = true
test-warnings = true

[tool.prospector.tools]
pylint = true
pyflakes = true
pycodestyle = true
dodgy = true

[tool.prospector.tools.mccabe]
run = true
max-complexity = 10

[tool.opengrep]
config = "opengrep.yaml"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true